--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -9,12 +9,12 @@ on:
   pull_request:
     branches:
       - master
+  workflow_dispatch:
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
-
     steps:
     - name: message
       run: echo "Hey"
@@ -23,5 +23,8 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.11
+    - name: Setup Maven settings
+      uses: whelk-io/maven-settings-xml-action@v10
+       
     - name: Build with Maven
       run: mvn -B package --file pom.xml
