--- a/.github/workflows/udemy1.yml
+++ b/.github/workflows/udemy1.yml
@@ -3,7 +3,7 @@ name: My test
 on: [workflow_dispatch, push]
 
 jobs:
-  my-job:
+  ubuntu-job:
       runs-on: ubuntu-latest
       steps:
         - name: multiline shell command
@@ -18,6 +18,7 @@ jobs:
             print (platform.processor())
   windows-job:
     runs-on: windows-latest
+    needs: ["ubuntu-job"]
     steps:
       - name: directory in Powershell
         run: Get-Location
